# instrument

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.toml
.claude/: settings.json  sync-tool-count.py
.cursor/rules/: architecture.mdc  bridge-history-privacy.mdc  code-style.mdc  component-patterns.mdc  design-system.mdc  testing.mdc  wasm-workflow.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  UI_REVIEW.md
docs/design/: DESIGN_REFERENCE.md  prototype-v4.html
docs/tools/: aes-encrypt-decrypt.md  api-key-generator.md  base64-encoder.md  basic-auth.md  bcrypt.md  bitwise-calculator.md  cert-decoder.md  chmod-calculator.md  cidr-calculator.md  color-contrast.md  config-converter.md  cron-parser.md  csv-previewer.md  env-parser.md  fake-data-generator.md  find-replace.md  hash.md  hex-converter.md  html-entity.md  html-formatter.md  http-status-codes.md  image-converter.md  iso8601-formatter.md  json-converter.md  json-diff.md  json-formatter.md  json-path.md  json-schema-validator.md  json-validator.md  jwt-builder.md  jwt-decoder.md  jwt.md  keycode-info.md  line-tools.md  lorem-ipsum.md  markdown-editor.md  md5-hash.md  nato-phonetic.md  number-base-converter.md  passphrase-generator.md  (+22 more)
public/: robots.txt  sitemap.xml
public/wasm-pkg/: instrument_web.d.ts  instrument_web.js  instrument_web_bg.wasm  instrument_web_bg.wasm.d.ts  package.json
scripts/: apply-ts-specta-derives.py  build-cli-sidecar.js  generate-og-image.mjs  generate-pwa-icons.mjs  tauri-build.mjs
src/: App.css  App.tsx  version.ts  vite-env.d.ts
src-core/: CLAUDE.md  Cargo.toml
src-core/.cargo/: config.toml
src-core/instrument-cli/: Cargo.toml
src-core/instrument-cli/src/: input.rs  main.rs  output.rs
src-core/instrument-cli/src/commands/: data.rs  encoding.rs  generators.rs  misc.rs  mod.rs  security.rs  text.rs
src-core/instrument-cli/tests/: cli.rs
src-core/instrument-core/: Cargo.toml
src-core/instrument-core/bindings/: AesInput.ts  AesOutput.ts  ApiKeyCharset.ts  ApiKeyFormat.ts  ApiKeyInput.ts  ApiKeyOutput.ts  Base64Input.ts  Base64Mode.ts  Base64Output.ts  BaseConverterInput.ts  BaseConverterOutput.ts  BasicAuthInput.ts  BasicAuthMode.ts  BasicAuthOutput.ts  BcryptInput.ts  BcryptOutput.ts  BitWidth.ts  BitwiseBase.ts  BitwiseInput.ts  BitwiseOutput.ts  BitwiseResult.ts  BitwiseWidth.ts  CaseInput.ts  CaseOutput.ts  CertDecodeInput.ts  CertDecodeOutput.ts  CertInfo.ts  ChangeType.ts  ChmodInput.ts  ChmodOutput.ts  CidrInput.ts  CidrOutput.ts  ColorContrastInput.ts  ColorContrastOutput.ts  ColorInput.ts  ColorOutput.ts  ConfigConvertInput.ts  ConfigConvertOutput.ts  ConfigFormat.ts  ConversionTarget.ts  (+158 more)
src-core/instrument-core/src/: lib.rs
src-core/instrument-core/src/auth/: basic_auth.rs  jwt_builder.rs  jwt_decoder.rs  mod.rs
src-core/instrument-core/src/crypto/: aes.rs  api_key.rs  bcrypt_tool.rs  cert.rs  hash.rs  md5.rs  mod.rs  nanoid.rs  passphrase.rs  password.rs  rsa_keygen.rs  sha256.rs  sha512.rs  totp.rs  ulid.rs  uuid_gen.rs  wordlist.txt
src-core/instrument-core/src/csv/: mod.rs  preview.rs
src-core/instrument-core/src/datetime/: cron.rs  date_calc.rs  iso8601.rs  mod.rs  timestamp.rs  timezone.rs
src-core/instrument-core/src/encoding/: base64.rs  char_info.rs  color.rs  hex.rs  html_entity.rs  mod.rs  morse.rs  qrcode.rs  url.rs
src-core/instrument-core/src/expression/: mod.rs
src-core/instrument-core/src/html/: mod.rs
src-core/instrument-core/src/json/: config_converter.rs  diff.rs  formatter.rs  mod.rs  path.rs  schema_validator.rs  validator.rs  yaml_to_json.rs
src-core/instrument-core/src/json/converter/: mod.rs  to_csv.rs  to_typescript.rs  to_xml.rs  to_yaml.rs
src-core/instrument-core/src/media/: image_convert.rs  mod.rs
src-core/instrument-core/src/network/: cidr.rs  curl_builder.rs  http_status.rs  mac_address.rs  mime.rs  mod.rs  user_agent.rs
src-core/instrument-core/src/numbers/: base_converter.rs  bitwise.rs  chmod.rs  color_contrast.rs  mod.rs  percentage.rs  roman.rs  semver.rs  unit_converter.rs
src-core/instrument-core/src/sql/: mod.rs
src-core/instrument-core/src/text/: case.rs  diff.rs  env_parser.rs  fake_data.rs  find_replace.rs  line_tools.rs  lorem_ipsum.rs  mod.rs  nato_phonetic.rs  slug.rs  string_escaper.rs  unicode.rs  word_counter.rs
src-core/instrument-core/src/xml/: mod.rs
src-core/instrument-core/src/yaml_fmt/: mod.rs
src-core/instrument-desktop/: Cargo.toml
src-core/instrument-desktop/src/: command_log.rs  lib.rs
src-core/instrument-desktop/src/commands/: auth.rs  crypto.rs  csv.rs  datetime.rs  encoding.rs  expression.rs  html.rs  json.rs  media.rs  mod.rs  network.rs  numbers.rs  regex.rs  sql.rs  text.rs  xml.rs  yaml_fmt.rs
src-core/instrument-web/: Cargo.toml
src-core/instrument-web/src/: lib.rs
src-core/regex-core/: Cargo.toml
src-core/regex-core/src/: explain.rs  lib.rs  router.rs  types.rs  wasm.rs
src-core/regex-core/src/engines/: fancy_engine.rs  mod.rs  rust_engine.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-aes.toml  allow-api-key.toml  allow-base-converter.toml  allow-base64.toml  allow-basic-auth.toml  allow-bcrypt.toml  allow-bitwise.toml  allow-cert-decoder.toml  allow-chmod.toml  allow-cidr-calculator.toml  allow-cli-integration.toml  allow-clipboard-read.toml  allow-color-contrast.toml  allow-color-converter.toml  allow-config-converter.toml  allow-cron.toml  allow-csv-preview.toml  allow-csv-to-json.toml  allow-env-parser.toml  allow-expression-eval.toml  allow-fake-data.toml  allow-find-replace.toml  allow-hash.toml  allow-hex-converter.toml  allow-html-entity.toml  allow-html-format.toml  allow-image-convert.toml  allow-iso8601.toml  allow-json-converter.toml  allow-json-diff.toml  allow-json-formatter.toml  allow-json-path.toml  allow-json-schema-validator.toml  allow-json-to-csv.toml  allow-jwt-build.toml  (+38 more)
temp/: csv-to-json-implementation.txt
(+206 files in other folders)
