[workspace]
resolver = "2"
members = [
    "instrument-core",
    "instrument-desktop",
    "instrument-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["you"]

# Workspace-level dependencies to avoid version duplication.
# instrument-core: no Tauri. Avoid jsonpath-lib (unmaintained); use serde_json_path per tool when needed.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4", "v7", "js"] }
percent-encoding = "2"

# Desktop (Tauri) and web (WASM) only
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
