[workspace]
resolver = "2"
members = [
    "instrument-core",
    "instrument-desktop",
    "instrument-web",
    "regex-core",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["you"]

# Workspace-level dependencies to avoid version duplication.
# instrument-core: no Tauri. Avoid jsonpath-lib (unmaintained); use serde_json_path per tool when needed.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
uuid = { version = "1", features = ["v1", "v4", "v7", "js"] }
percent-encoding = "2"

# Shared (instrument-core JWT) and desktop/web
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
