[package]
name = "instrument-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared library crate for Instrument (no Tauri deps)"

[lib]
name = "instrument_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }
ulid = "1"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
serde_json = { workspace = true }
jsonpath-rust = "0.7"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
