[package]
name = "instrument-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared library crate for Instrument (no Tauri deps)"

[lib]
name = "instrument_core"
path = "src/lib.rs"

[features]
default = ["full"]
full = ["sql"]
sql = ["dep:sqlformat"]
ts-export = []

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"
required-features = ["ts-export"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
digest = { workspace = true }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex = "0.4"
hmac = { workspace = true }
md-5 = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }
ulid = "1"
nanoid = "0.4"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
cron = "0.12"
serde_json = { workspace = true }
jsonpath-rust = "0.7"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }
sqlformat = { version = "0.2", optional = true }
url = "2"
csv = "1"
meval = "0.2"
similar = "2"
log = "0.4"
x509-parser = "0.16"
ipnetwork = "0.20"
qrcode = "0.14"
ts-rs = { version = "10", features = ["serde-compat"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
