[package]
name = "instrument-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WASM bindings for Instrument (browser)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
instrument-core = { path = "../instrument-core" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
