[package]
name = "instrument-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "WASM bindings for Instrument (browser)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
instrument-core = { path = "../instrument-core" }
regex-core = { path = "../regex-core" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Enable getrandom wasm_js backend for wasm32 (required by rand/chrono-tz etc.)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
