[package]
name = "regex-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable when building regex-core standalone as WASM; leave off when used as dependency of instrument-web to avoid duplicate symbols.
wasm-export = []

[dependencies]
regex = "1"
regex-syntax = "0.8"
fancy-regex = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

